package original.api.general;

public interface Foodproduct extends Product,Food {
    double Calories();



}
