@startuml

title __TD1's Class Diagram__\n

  namespace original.api.general {
    class original.api.general.Burger {
    }
  }
  

  namespace original.api.general {
    class original.api.general.Cheddar {
    }
  }
  

  namespace original.api.general {
    class original.api.general.DeepFriedOnions {
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Food{
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Foodproduct extends Food,Product  {
    }
  }
  

  namespace original.api.general {
    class original.api.general.Meat {
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Product {
    }
  }
  

  namespace original.api.general {
    class original.api.general.Sauce {
    }
  }
  

  namespace original.api.general {
    class original.api.general.Tomato {
    }
  }
  

  namespace original.client {
    class original.client.App {
    }
  }
  

  original.api.general.Burger .right.|> original.api.general.Foodproduct
  original.api.general.Cheddar .up.|> original.api.general.Foodproduct
  original.api.general.DeepFriedOnions .up.|> original.api.general.Foodproduct
  original.api.general.Meat .up.|> original.api.general.Foodproduct
  original.api.general.Meat o-- original.api.general.Meat.MeatType : type
  original.api.general.Sauce .up.|> original.api.general.Foodproduct
  original.api.general.Sauce o-- original.api.general.Sauce.SauceType : type
  original.api.general.Tomato .up.|> original.api.general.Foodproduct
  original.client.App .down.|> original.api.general.Burger : Choose
  original.client.App o-- original.api.restaurant.TypeResto : Choose

  original.client.App o-- original.burger.TypeMenu : Choose
  original.client.App o-- original.burger.TailleMenu : Choose
   original.client.App o-- original.burger.Quantiteingred : Choose
  original.burger.Quantiteingred .up.|> original.api.general.Foodproduct


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
